Makefile.am gimp.spec.in user_install new file gtkrc_user which gets
2000-11-08  Michael Natterer  <mitch@gimp.org>

	* Makefile.am
	* gimp.spec.in
	* user_install
	* gtkrc_user: new file gtkrc_user which gets installed as
	~/.gimp-1-1/gtkrc (We used to parse the same file twice if the
	user didn't the change user-specific gtkrc. The new file has
	comments only).

	* app/app_procs.c: g_free() the user gtkrc filename after use.

	* libgimp/gimpui.c: parse the user gtkrc here too.


Former-commit-id: 312c68004726b7821bf65e522cbf321c72fcf917

--- a/Makefile.am
+++ b/Makefile.am
@@ -176,6 +176,7 @@ EXTRA_DIST = \
 	MAINTAINERS				\
 	TODO					\
 	gtkrc					\
+	gtkrc_user				\
 	unitrc					\
 	gimp_logo.ppm				\
 	gimp_splash.ppm				\
@@ -201,6 +202,7 @@ gimpsysconf_DATA = \
 	gimprc			\
 	gimprc_user		\
 	gtkrc			\
+	gtkrc_user		\
 	unitrc			\
 	ps-menurc
 
