plug-ins/print/Makefile.am set the locale to "gimp-std-plug-ins". We do
2000-11-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/Makefile.am
	* plug-ins/print/print.c: set the locale to "gimp-std-plug-ins". We
	do this by defining LOCALE in the Makefile so the gimp-print people
	can define their own value and we can still continue to use the same
	C files that ship with the standalone gimp-print package. Thanks to
	Zbigniew Chyla <cyba@gnome.pl> for pointing this out.


Former-commit-id: e94f7fd15ea26946c9e76c4f17685ccc52556c37

--- a/plug-ins/print/Makefile.am
+++ b/plug-ins/print/Makefile.am
@@ -43,6 +43,7 @@ INCLUDES = \
 
 AM_CPPFLAGS = \
         -DLOCALEDIR=\""$(localedir)"\"		\
+        -DLOCALE=\""gimp-std-plugins"\"		\
 	@LP_DEF@				\
 	@LPSTAT_DEF@				\
 	@LPR_DEF@				\
