libgimp/Makefile.am #include libgimp-include.c in libgimp.types instead of
2000-11-19  Michael Natterer  <mitch@gimp.org>

	* libgimp/Makefile.am
	* libgimp/libgimp.types: #include libgimp-include.c in libgimp.types
	instead of passing it on the command line in Makefile.am

	* libgimp/libgimp-decl.txt: updated.


Former-commit-id: 55c617dc337e4cd86673a0596286e5721a75dbac

--- a/devel-docs/libgimp/Makefile.am
+++ b/devel-docs/libgimp/Makefile.am
@@ -37,10 +37,14 @@ sgml/libgimp-doc.bottom: $(tmpl_sources)
 
 scan:
 	-(cd $(srcdir) \
-	&& env CFLAGS="$(CFLAGS) libgimp-include.c" CPPFLAGS="$(CPPFLAGS)" \
+	&& env \
+		CFLAGS="$(CFLAGS)" \
+		CPPFLAGS="$(CPPFLAGS)" \
 		LDFLAGS="$(LDFLAGS)" \
 		gtkdoc-scanobj --module=$(DOC_MODULE) \
-	&& gtkdoc-scan --module=$(DOC_MODULE) --source-dir=$(DOC_SOURCE_DIR) \
+	&& gtkdoc-scan \
+		--module=$(DOC_MODULE) \
+		--source-dir=$(DOC_SOURCE_DIR) \
 		--ignore-headers="gimpintl.h libgimp-intl.h stdplugins-intl.h gserialize.h")
 
 templates: scan
