Added a brush contributed by Nevit <nevilo@yahoo.com>.
* plug-ins/gimpressionist/Brushes/{Makefile.in,snow1.pgm}: Added a
brush contributed by Nevit <nevilo@yahoo.com>.


Former-commit-id: b302fe37c0b6dff5d0e3d23a402fd5f693d54483

--- a/plug-ins/gimpressionist/Brushes/Makefile.am
+++ b/plug-ins/gimpressionist/Brushes/Makefile.am
@@ -47,6 +47,7 @@ brushdata_DATA = \
 	shape02.pgm		\
 	shape03.pgm		\
 	shape04.pgm		\
+	snow1.pgm		\
 	sphere.ppm		\
 	splat1.pgm		\
 	splat2.pgm		\
