Fix to avoid a warning when closing window.
* plug-ins/gimpressionist/brush.c: Fix to avoid a warning when
closing window.

* plug-ins/gimpressionist/Paper/struc.pgm
* plug-ins/gimpressionist/Paper/Makefile.am
* plug-ins/gimpressionist/Presets/ApplyCanvas
* plug-ins/gimpressionist/Presets/Makefile.am: Added a paper and
preset on request from Bex, to simulate "Apply Canvas".


Former-commit-id: 82093314cbb182fef4fc28f08cc0d61c8100c02a

--- a/plug-ins/gimpressionist/Paper/Makefile.am
+++ b/plug-ins/gimpressionist/Paper/Makefile.am
@@ -10,7 +10,8 @@ paperdata_DATA = \
 	defaultpaper.pgm	\
 	marble.pgm		\
 	marble2.pgm		\
-	stone.pgm
+	stone.pgm		\
+	struc.pgm
 
 EXTRA_DIST = $(paperdata_DATA)
 
