Unhide 'gee' once more... come on Sven, we have nothing worth hiding any
Fri Dec 15 19:16:31 GMT 2000  Adam D. Moss <adam@gimp.org>

	* plug-ins/common/gee.c, plug-ins/common/Makefile.am,
	plug-ins/common/plugin-defs.pl, plug-ins/common/gee_zoom.c,
	plug-ins/common/.cvsignore:
	Unhide 'gee' once more... come on Sven, we have nothing worth
	hiding any longer.  =)


Former-commit-id: a7e69fe49280dfd53c7855277b2da872bee1fab7

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -61,6 +61,7 @@ libexec_PROGRAMS = \
 	gauss_rle \
 	gbr \
 	gee \
+	gee_zoom \
 	gicon \
 	gif \
 	gifload \
@@ -549,6 +550,15 @@ gee_SOURCES = \
 	gee.c
 
 gee_LDADD = \
+	$(top_builddir)/libgimp/libgimpui.la	\
+	$(top_builddir)/libgimp/libgimp.la	\
+	$(GTK_LIBS)				\
+	$(INTLLIBS)
+
+gee_zoom_SOURCES = \
+	gee_zoom.c
+
+gee_zoom_LDADD = \
 	$(top_builddir)/libgimp/libgimpui.la	\
 	$(top_builddir)/libgimp/libgimp.la	\
 	$(GTK_LIBS)				\
