Jens Lautenbacher <jtl@gimp.org>
2000-12-16  Sven Neumann  <sven@gimp.org>
	    Jens Lautenbacher <jtl@gimp.org>

	* Makefile.am
	* docs/Wilber_Construction_Kit.xcf.gz: added an example XCF file


Former-commit-id: f9ea72123880de1976e8bace2fbca015ac312845

--- a/Makefile.am
+++ b/Makefile.am
@@ -123,6 +123,7 @@ EXTRA_DIST = \
 	docs/Wilber.svg				\
 	docs/Wilber.xcf.gz			\
 	docs/Wilber.xcf.gz.README		\
+	docs/Wilber_Construction_kit.xcf.gz	\
 	docs/cheat_sheet.txt			\
 	docs/gimp.txt				\
 	docs/keybindings.txt 			\
