images/Makefile.am images/anchor_layer_icon.png
2000-12-17  Michael Natterer  <mitch@gimp.org>

	* images/Makefile.am
	* images/anchor_layer_icon.png
	* images/lower_layer_icon.png
	* images/raise_layer_icon.png: removed.

	* images/anchor_icon.png
	* images/lower_icon.png
	* images/raise_icon.png: added.

	This breaks the links to these files temporarily until I checkin
	the HTML files later today.


Former-commit-id: 9035daf3c3f15ba1e5b1b9704e9d4d88f6b1b0b7

--- a/help/images/Makefile.am
+++ b/help/images/Makefile.am
@@ -6,13 +6,13 @@ helpdata_DATA = \
 	eek.png				\
 	wilber.png			\
 	\
-	anchor_layer_icon.png		\
+	anchor_icon.png			\
 	delete_icon.png			\
 	duplicate_icon.png		\
-	lower_layer_icon.png		\
+	lower_icon.png			\
 	new_icon.png			\
 	path_to_selection_icon.png	\
-	raise_layer_icon.png		\
+	raise_icon.png			\
 	stroke_icon.png			\
 	\
 	layers_example.png		\
