More cleanup, sync'ed Makefile.am again.
2000-12-17  Michael Natterer  <mitch@gimp.org>

	* images/*: More cleanup, sync'ed Makefile.am again.


Former-commit-id: 323216b785751ec9b59fd77fad4ad9a60a454797

--- a/help/images/Makefile.am
+++ b/help/images/Makefile.am
@@ -11,8 +11,13 @@ helpdata_DATA = \
 	duplicate_icon.png		\
 	lower_icon.png			\
 	new_icon.png			\
-	path_to_selection_icon.png	\
+	pen_add_icon.png		\
+	pen_delete_icon.png		\
+	pen_edit_icon.png		\
+	pen_normal_icon.png		\
+	to_selection_icon.png		\
 	raise_icon.png			\
+	selection_to_path_icon.png	\
 	stroke_icon.png			\
 	\
 	layers_example.png		\
