removed gpb.c, added gih.c
2000-12-18  Michael Natterer  <mitch@gimp.org>

	* po-plug-ins/POTFILES.in: removed gpb.c, added gih.c


Former-commit-id: 36c685884d226bdc641c7cc8710fd718524e0e35

--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -57,8 +57,8 @@ plug-ins/common/gee.c
 plug-ins/common/gicon.c
 plug-ins/common/gif.c
 plug-ins/common/gifload.c
+plug-ins/common/gih.c
 plug-ins/common/glasstile.c
-plug-ins/common/gpb.c
 plug-ins/common/gqbist.c
 plug-ins/common/gradmap.c
 plug-ins/common/grid.c
