--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -56,6 +56,7 @@ plug-ins/common/gbr.c
 plug-ins/common/gee.c
 plug-ins/common/gicon.c
 plug-ins/common/gif.c
+plug-ins/common/gih.c
 plug-ins/common/gifload.c
 plug-ins/common/gih.c
 plug-ins/common/glasstile.c
