Jens Lautenbacher <jtl@gimp.org>
2000-12-18  Sven Neumann  <sven@gimp.org>
	    Jens Lautenbacher <jtl@gimp.org>

	* data/brushes/Makefile.am
	* data/brushes/pepper.gpb: removed
	* data/brushes/pepper.gbr: added (a nicer version of) the Pepper
	brush in the .gbr format that does support pixmap brushes now.

	* plug-ins/common/gbr.c: added support for loading obsoleted
	Gimp Pixmap Brushes format (.gpb).


Former-commit-id: f4279e02158cdac6df116b537983b8e61228d520

--- a/data/brushes/Makefile.am
+++ b/data/brushes/Makefile.am
@@ -49,7 +49,7 @@ FILES = \
 	galaxy.gbr		\
 	galaxy_big.gbr		\
 	galaxy_small.gbr	\
-	pepper.gpb		\
+	pepper.gbr		\
 	pixel.gbr		\
 	thegimp.gbr		\
 	SketchBrush-16.gih	\
