Jens Lautenbacher <jtl@gimp.org>
2000-12-18  Sven Neumann  <sven@gimp.org>
	    Jens Lautenbacher <jtl@gimp.org>

	* plug-ins/common/gbr.c: save and load brush name into/from layer name.

	* plug-ins/common/gih.c: added gih loader. The loader is able to read
	the old brush pipe format too. Brush pipes will only be saved in the
	new format. Fixes bugs #21806, #34167 and #34168.


Former-commit-id: f44f7fc6fd058349f0ee36bdfe385945195c78be

--- a/data/brushes/Makefile.am
+++ b/data/brushes/Makefile.am
@@ -14,7 +14,7 @@ EXTRA_DIST = $(brushdata_DATA)
 FILES = \
 	10x10square.gbr		\
 	10x10squareBlur.gbr	\
-	11circle.gb		\
+	11circle.gbr		\
 	11fcircle.gbr		\
 	13circle.gbr		\
 	13fcircle.gbr		\
