Jens Lautenbacher <jtl@gimp.org>
2000-12-18  Sven Neumann  <sven@gimp.org>
	    Jens Lautenbacher <jtl@gimp.org>

	* data/brushes/Makefile.am: remove old pepper.gpb when installing new
	brushes.

	* data/brushes/SketchBrush-16.gih
	* data/brushes/SketchBrush-32.gih
	* data/brushes/SketchBrush-64.gih: converted to grayscale brush pipes.

	* plug-ins/common/gih.c: commented out code that sets loaded pipe
	parameters as parasite until we figure out how to do it right.

	* devel-docs/gpb.txt: mention that the .gpb format is obsolete.
	* devel-docs/gih.txt: updated.


Former-commit-id: 690ac8d13d5024d5796990903cb53315ce2b3db2

--- a/data/brushes/Makefile.am
+++ b/data/brushes/Makefile.am
@@ -58,5 +58,5 @@ FILES = \
 	xcf.gbr
 
 install-data-local:
-	rm -f $(brushdatadir)/round1.vbr
+	rm -f $(brushdatadir)/round1.vbr $(brushdatadir)/pepper.gpb
 
