Typo fixes. Added gee_zoom.c. Added i18n of menu item.
2000-12-19  Stanislav Brabec  <utx@penguin.cz>

        * plug-ins/gap/gap_lib.c: Typo fixes.
        * po-plug-ins/POTFILES.in: Added gee_zoom.c.
        * plug-ins/common/gee.c, plug-ins/common/gee_zoom.c: Added i18n
        of menu item.


Former-commit-id: 157be09f07ee52dca70fdb3c1752436bf86fb157

--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -54,6 +54,7 @@ plug-ins/common/gauss_iir.c
 plug-ins/common/gauss_rle.c
 plug-ins/common/gbr.c
 plug-ins/common/gee.c
+plug-ins/common/gee_zoom.c
 plug-ins/common/gicon.c
 plug-ins/common/gif.c
 plug-ins/common/gih.c
