Remove gpb and spheredesigner. Add gih. (Thanks Sven and Jens for cleaning
2000-12-20  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/makefile.mingw.in (COMMON): Remove gpb and
	spheredesigner. Add gih. (Thanks Sven and Jens for cleaning up the
	brush stuff...)

	* libgimp/gimp.def: Add gimp_invert.


Former-commit-id: 5e4ab1a3fc74fe033a6e7f136358c1fac8e3da2d

--- a/plug-ins/makefile.mingw.in
+++ b/plug-ins/makefile.mingw.in
@@ -82,8 +82,8 @@ COMMON = 			\
 	gicon			\
 	gif			\
 	gifload			\
+	gih			\
 	glasstile		\
-	gpb			\
 	gqbist			\
 	gradmap			\
 	grid			\
@@ -134,7 +134,6 @@ COMMON = 			\
 	snoise			\
 	sobel			\
 	sparkle			\
-	spheredesigner		\
 	spread			\
 	struc			\
 	sunras			\
