--- a/modules/makefile.msc
+++ b/modules/makefile.msc
@@ -28,7 +28,7 @@ CC = cl -G5 -GF $(OPTIMIZE) -W3 -nologo
 LDFLAGS = /link $(LINKDEBUG)
 INSTALL = copy
 
-GIMP_VER = 1.1
+GIMP_VER = 1.2
 GTK_VER = 1.3
 GLIB_VER = 1.3
 
@@ -67,11 +67,11 @@ colorsel_triangle-$(GIMP_VER).dll : colorsel_triangle.obj module.def
 colorsel_water-$(GIMP_VER).dll : colorsel_water.obj module.def
 	$(CC) $(CFLAGS) -LD -Fe$@ colorsel_water.obj $(LDFLAGS) ..\app\gimp.lib $(GTK)\gtk\gtk-$(GTK_VER).lib $(GTK)\gdk\gdk-$(GTK_VER).lib $(INTL)\gnu-intl.lib $(GLIB)\gmodule-$(GLIB_VER).lib $(GLIB)\glib-$(GLIB_VER).lib /def:module.def
 
-cdisplay_gamma-$(GIMP_VER).dll : cdisplay_gamma.obj module.def
-	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_gamma.obj $(LDFLAGS) ..\app\gimp.lib $(GTK)\gtk\gtk-$(GTK_VER).lib $(GTK)\gdk\gdk-$(GTK_VER).lib $(INTL)\gnu-intl.lib $(GLIB)\gmodule-$(GLIB_VER).lib $(GLIB)\glib-$(GLIB_VER).lib /def:module.def
+# cdisplay_gamma-$(GIMP_VER).dll : cdisplay_gamma.obj module.def
+# 	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_gamma.obj $(LDFLAGS) ..\app\gimp.lib $(GTK)\gtk\gtk-$(GTK_VER).lib $(GTK)\gdk\gdk-$(GTK_VER).lib $(INTL)\gnu-intl.lib $(GLIB)\gmodule-$(GLIB_VER).lib $(GLIB)\glib-$(GLIB_VER).lib /def:module.def
 
-cdisplay_highcontrast-$(GIMP_VER).dll : cdisplay_highcontrast.obj module.def
-	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_highcontrast.obj $(LDFLAGS) ..\app\gimp.lib $(GTK)\gtk\gtk-$(GTK_VER).lib $(GTK)\gdk\gdk-$(GTK_VER).lib $(INTL)\gnu-intl.lib $(GLIB)\gmodule-$(GLIB_VER).lib $(GLIB)\glib-$(GLIB_VER).lib /def:module.def
+# cdisplay_highcontrast-$(GIMP_VER).dll : cdisplay_highcontrast.obj module.def
+# 	$(CC) $(CFLAGS) -LD -Fe$@ cdisplay_highcontrast.obj $(LDFLAGS) ..\app\gimp.lib $(GTK)\gtk\gtk-$(GTK_VER).lib $(GTK)\gdk\gdk-$(GTK_VER).lib $(INTL)\gnu-intl.lib $(GLIB)\gmodule-$(GLIB_VER).lib $(GLIB)\glib-$(GLIB_VER).lib /def:module.def
 
 # General rule for building 
 .c.obj:
