--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -22,9 +22,7 @@ EXTRA_DIST = \
 libexec_LTLIBRARIES = \
 	libcolorsel_gtk.la		\
 	libcolorsel_triangle.la		\
-	libcolorsel_water.la		\
-	libcdisplay_gamma.la		\
-	libcdisplay_highcontrast.la
+	libcolorsel_water.la
 
 libcolorsel_gtk_la_SOURCES = colorsel_gtk.c
 libcolorsel_gtk_la_LDFLAGS = -avoid-version -module
@@ -38,10 +36,10 @@ libcolorsel_water_la_SOURCES = colorsel_water.c
 libcolorsel_water_la_LDFLAGS = -avoid-version -module
 libcolorsel_water_la_LIBADD = $(GTK_LIBS)
 
-libcdisplay_gamma_la_SOURCES = cdisplay_gamma.c
-libcdisplay_gamma_la_LDFLAGS = -avoid-version -module
-libcdisplay_gamma_la_LIBADD = $(GTK_LIBS)
+## libcdisplay_gamma_la_SOURCES = cdisplay_gamma.c
+## libcdisplay_gamma_la_LDFLAGS = -avoid-version -module
+## libcdisplay_gamma_la_LIBADD = $(GTK_LIBS)
 
-libcdisplay_highcontrast_la_SOURCES = cdisplay_highcontrast.c
-libcdisplay_highcontrast_la_LDFLAGS = -avoid-version -module
-libcdisplay_highcontrast_la_LIBADD = $(GTK_LIBS)
+## libcdisplay_highcontrast_la_SOURCES = cdisplay_highcontrast.c
+## libcdisplay_highcontrast_la_LDFLAGS = -avoid-version -module
+## libcdisplay_highcontrast_la_LIBADD = $(GTK_LIBS)
