remove display filter help
-Yosh


Former-commit-id: c8cfd1a92dbc555b278c75be6a3a0ec2871bfbff

--- a/help/C/dialogs/Makefile.am
+++ b/help/C/dialogs/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = layers channels paths palette_editor gradient_editor display_filters color_selectors preferences 
+SUBDIRS = layers channels paths palette_editor gradient_editor color_selectors preferences 
 
 helpdatadir = $(gimpdatadir)/help/C/dialogs
 
