roll changelog for 1.2
-Yosh


Former-commit-id: c1adde16d2adaf883cd80069c9a7572754ffdfe9

--- a/Makefile.am
+++ b/Makefile.am
@@ -173,6 +173,7 @@ EXTRA_DIST = \
 	README.win32				\
 	README.perl				\
 	ChangeLog.pre-1-0			\
+	ChangeLog.pre-1-2			\
 	PLUGIN_MAINTAINERS			\
 	MAINTAINERS				\
 	TODO					\
